--- a/.env
+++ b/.env
@@ -26,3 +26,7 @@ APP_SECRET=fa383b06622f6261c46ff9db61c1b4cf
 DATABASE_URL="mysql://root:@127.0.0.1:3306/courssymfonyapi?serverVersion=8.0.21&charset=utf8mb4"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
