--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -5,3 +5,8 @@ api_platform:
         json: ['application/merge-patch+json']
     swagger:
         versions: [3]
+    # defaults:
+    #     pagination_items_per_page: 5
+    # collection:
+    #     pagination:
+    #         page_parameter_name: page_number
