--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -5,6 +5,8 @@ api_platform:
         json: ['application/merge-patch+json']
     swagger:
         versions: [3]
+    formats:
+        json: ['application/json']
     # defaults:
     #     pagination_items_per_page: 5
     # collection:
