--- a/.env
+++ b/.env
@@ -30,3 +30,9 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/courssymfonyapi?serverVersion=8.0.21&
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=symfony
+###< lexik/jwt-authentication-bundle ###
